--- a/contact.html
+++ b/contact.html
@@ -10,23 +10,46 @@
 <body>
 
 
-<div class="header">
-    <a class="alogo" href="index.html"><img class="logobutton" src="rlogo.png"></a>
+<div class="header2">
+    <a class="alogo" href="index.html"><img class="logobutton2" src="rlogo-min.png"></a>
 </div>
-<div class="pagetitles">
-    <div>
-        <a href="about.html"><img class="title1" src="about.png"></a>
-    </div>
-    <div>
-        <a href="works.html"><img class="title1" src="works.png"></a>
-    </div>
-    <div>
-        <a href="contact.html"><img class="title1" src="contact.png"></a>
-    </div>
-</div>
+<img class="cars" src="car2.png">
+<img class="cars2" src="car1.png">
+
+<header>
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+</header>
 
 
+<nav class="side-panel" id="sidePanel">
+    <ul>
+        <li><a class="menulink" href="about.html"><img class="imagemenu" src="logo1.png" alt="Logo 1"> ABOUT</a></li>
+        <li><a class="menulink" href="works.html"><img class="imagemenu" src="logo4.png" alt="Logo 2"> WORKS</a></li>
+        <li><a class="menulink" href="contact.html"><img class="imagemenu" src="logo3.png" alt="Logo 3"> CONTACT</a></li>
+
+    </ul>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <script src="script.js"></script>
 
     
 </body>
+
 </html>
