--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,24 @@
 </nav>
 
 
+<div class="contact1">
+Would you like to work together?
+</div>
 
-
-
+<div class="form">
+    <form action="https://api.web3forms.com/submit" class="form1" method="POST">
+        <input type="hidden" name="access_key" value="a8ed9164-d58e-40dc-81bc-d0b793d89e25">
+        <input type="hidden" name="from_name" value="ROBERTO VAZQUEZ">
+        <input type="hidden" name="redirect" value="https://robertovazquez.work/thanks.html">
+        First Name: <input type="text" name="first_name"><br>
+        Last Name: <input type="text" name="last_name"><br>
+        Email: <input type="text" name="email"><br>
+        Message:<br><textarea rows="5" name="message" cols="30"></textarea><br>
+        <input type="submit" name="submit" value="Submit">
+        </form>
+        
+    
+    </div>
 
 
 
