--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ROBERTO VAZQUEZ</title>
 </head>
 <body>
-<img class="backgroundvid" src="background.gif">
+<img class="backgroundvid" src="background4.gif">
 
 <div class="header">
     <a class="alogo2" href="index.html"><img class="logobutton" src="rlogo.png"></a>
