--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@
 </div>
 <div class="works2">
     <a href="donda.html"><div class="workspic2">
-        <img class="picz" src="donda/DONDAif2.jpg">
+        <img class="picz" src="donda/DONDA5.4.jpg">
     </div>
     <div class="worktext">
         DONDA POSTERS * 2021
@@ -55,6 +55,15 @@
     
 </div>
 
+<div class="works3">
+    <a href="videocollage.html"><div class="workspic3">
+        <img class="picz" src="video collage.jpg">
+    </div>
+    <div class="worktext">
+        VIDEO COLLAGE * 2021
+    </div></a>
+    
+</div>
 
 
 
