--- a/donda.html
+++ b/donda.html
@@ -36,13 +36,24 @@
 
 
 <div class="abouttext3">
-    video collage
+    DONDA posters
 </div>
 <div class="abouttext4">
-    a video montage of moments throughout a planned day at the park with friends. sonic element was created in FL Studio 12, and the video was shot edited in Adobe Premiere Pro.
+    a collection of poster designs created in a poster design exercise for Kanye West's DONDA performance in Chicago, IL at Soldier Field. all posters were created using Adobe Illustrator and Photoshop.
 </div>
-<iframe class="videocol" src="https://drive.google.com/file/d/11ggCKe2Tft6V6-HsKVGB5AzDW7HSEEGT/preview" allow="autoplay"></iframe>
-
+<div class="dondaposters">
+    <span><img class="donda1" src="donda/DONDA5.4.jpg"></span>
+    <span><img class="donda1" src="donda/DONDA POSTERS3.4.jpg"></span>
+    <span><img class="donda1" src="donda/donda2 (1).jpg"></span>
+    <span><img class="donda1" src="donda/DONDA5.2.jpg"></span>
+    <span><img class="donda2" src="donda/DONDAif2.jpg"></span>
+    <span><img class="donda2" src="donda/DONDAif3.jpg"></span>
+    <span><img class="donda2" src="donda/DONDAif4.jpg"></span>
+    <span><img class="donda2" src="donda/DONDAif5.jpg"></span>
+    <span><img class="donda2" src="donda/DONDAif6.jpg"></span>
+    <span><img class="donda2" src="donda/DONDAif7.jpg"></span>
+    <span><img class="donda2" src="donda/DONDAif8.jpg"></span>
+</div>
 
 
 
