--- a/works.html
+++ b/works.html
@@ -33,7 +33,7 @@
 
 
 <div class="works1">
-    <a href="https://twothousandrecords.net"><div class="workspic1">
+    <a href="twothousandrecords.html"><div class="workspic1">
         <img class="picz" src="twothousand.png">
     </div>
     <div class="worktext">
