mobile compatibility pt.1235235

--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
 </nav>
 
 
-<div class="contact1">
-Would you like to work together?
+<div class="contact">
+<div class="contact1">Want to get in touch? Send me a message!</div>
 </div>
 
 <div class="form">
