--- a/index.html
+++ b/index.html
@@ -8,24 +8,30 @@
     <title>ROBERTO VAZQUEZ</title>
 </head>
 <body>
-<img class="backgroundvid" src="background4.gif">
 
-<div class="header">
-    <a class="alogo2" href="index.html"><img class="logobutton" src="rlogo.png"></a>
+<div class="background">
+    <header>
+        <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    </header>
+    <nav class="side-panel" id="sidePanelHome">
+        <ul>
+            <li><a class="menulink" href="about.html"><img class="imagemenu" src="logo1.png" alt="Logo 1"> ABOUT</a></li>
+            <li><a class="menulink" href="works.html"><img class="imagemenu" src="logo4.png" alt="Logo 2"> WORKS</a></li>
+            <li><a class="menulink" href="contact.html"><img class="imagemenu" src="logo3.png" alt="Logo 3"> CONTACT</a></li>
+    
+        </ul>
+    </nav>
+<div class="scrolllogo">
+    <a href="index.html"><img class="logobutton" src="rv1.png" draggable="false"></a>
+    <p class="sitetitle1" >ROBERTO VAZQUEZ</p>
+    <p class="sitetitle2" >graphic designer</p>
 </div>
-<div class="pagetitles">
-    <div>
-        <a href="about.html"><img class="title1" src="about.png"></a>
-    </div>
-    <div>
-        <a href="works.html"><img class="title2" src="works.png"></a>
-    </div>
-    <div>
-        <a href="contact.html"><img class="title2" src="contact.png"></a>
-    </div>
+
+
+
+
+
 </div>
-
-
 
     
 </body>
