little bug fixes

--- a/works.html
+++ b/works.html
@@ -32,7 +32,7 @@
 
 <div class="worksmain">
 
-
+<p class="abouttext2">some work i've done</p>
 
 <div class="works1">
     <a href="twothousandrecords.html"><div class="workspic1">
