--- a/about.html
+++ b/about.html
@@ -13,8 +13,7 @@
 <div class="header2">
     <a class="alogo" href="index.html"><img class="logobutton2" src="rlogo-min.png"></a>
 </div>
-<img class="cars" src="car2.png">
-<img class="cars2" src="car1.png">
+
 
 <header>
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
@@ -34,14 +33,15 @@
 
 
 
-
+<div class="aboutdivmain">
 
 <p class="abouttext1">Hi!** </p>
+<p class="abouttext2">My name is Roberto Vazquez and I am a graphic designer interested in a number of different mediums such as sonic experimentation, visual design, web design, and making things that look cool.  --- REWRITEEE
+     </p>
+ <p class="abouttext22">
+    </p>
 
-<p class="abouttext2">My name is Roberto Vazquez and I am a graphic designer interested in a number of different mediums such as sonic experimentation, visual design, web design, and making things that look cool.   </p>
-
-
-
+</div>
 
 
 
