--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     
 <div class="scrolllogo">
-    <a href="index.html"><img class="logobutton" src="rv1.png" draggable="false"></a>
+    <a href="index.html"><img class="logobutton" src="rvlogo2.png" draggable="false"></a>
     <p class="sitetitle1" >ROBERTO VAZQUEZ</p>
     <p class="sitetitle2" >graphic designer</p>
 </div>
