start of home page redesign

--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
     <p class="sitetitle2" >graphic designer</p>
 </div>
 
-
+<div class="projectphotos">
+    <span>
+        <img class="ppimage1" src="video collage - Copy.jpg">
+    </span>
+    <span>
+        <img class="ppimage1" src="soundvisual - Copy.jpg">
+    </span>
+    <span>
+        <img class="ppimage1" src="Reconstruction 3 - Copy.JPG">
+    </span>
+</div>
 
 
 
