--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 </div>
 
 <div class="projectphotos">
-    <span>
-        <img class="ppimage1" src="video collage - Copy.jpg">
-    </span>
-    <span>
-        <img class="ppimage1" src="soundvisual - Copy.jpg">
-    </span>
-    <span>
-        <img class="ppimage1" src="Reconstruction 3 - Copy.JPG">
-    </span>
+    <div class="ppimage1">
+        <a href="videocollage.html"> <img class="ppimage11" src="videocollage.png"><span class="textppimage">VIDEO COLLAGE - 2021</span></a>
+    </div>
+    <div class="ppimage2">
+        <a href="sonicvisuals.html"> <img class="ppimage22" src="sonicvisuals.png"><span class="textppimage">SONIC PRACTICE - 2021</span></a>
+    </div>
+    <div class="ppimage3">
+        <a href="twothousandrecords.html"> <img class="ppimage33" src="ttrthumb.png"><span class="textppimage">2000RECORDS - 2024</span></a>
+    </div>
 </div>
 
 
