desktop version almost complete
time to catch up in mobile

--- a/about.html
+++ b/about.html
@@ -35,10 +35,16 @@
 
 <div class="aboutdivmain">
 
-<p class="abouttext1">Hi!** </p>
-<p class="abouttext2">My name is Roberto Vazquez and I am a graphic designer interested in a number of different mediums such as sonic experimentation, visual design, web design, and making things that look cool.  --- REWRITEEE
+<p class="abouttext1">Hi!<img class="stargif" src="stargifreal.gif" draggable="false"> </p>
+<p class="abouttext2">I’m Roberto Vazquez, a graphic designer with a love for exploring a wide range of creative mediums. From sonic production and visual design to web design, I thrive on creating visually stunning and innovative projects that push the boundaries of what could be. My motivation is driven by a deep excitement for experimentation with the unknown and making things that not only look appealing but also resonate deeply with whoever comes across my work.
      </p>
- <p class="abouttext22">
+
+
+    <img class="aboutimg1" src="about1.png" draggable="false">
+
+
+
+ <p class="abouttext22">I am currently seeking creative opportunities where I can contribute my extensive knowledge and experience in design programs and collaboration. I am particularly interested in roles that allow me to work on diverse projects, from branding and web design to multimedia installations. My ideal position is one where I can collaborate with like-minded professionals who inspire me to continue to grow as a designer and bring innovative ideas to life. If you would like to contact me, feel free to leave me a <a class="messagebutton" href="contact.html"> message!</a>
     </p>
 
 </div>
@@ -47,7 +53,9 @@
 
 
 
-
+<div class="linkbottom4">
+    ©ROBERTO VAZQUEZ
+</div>
 
   <script src="script.js"></script>
 
