--- a/index.html
+++ b/index.html
@@ -36,10 +36,19 @@
         <a href="videocollage.html"> <img class="ppimage11" src="videocollage.png"><span class="textppimage">VIDEO COLLAGE - 2021</span></a>
     </div>
     <div class="ppimage2">
-        <a href="sonicvisuals.html"> <img class="ppimage22" src="sonicvisuals.png"><span class="textppimage">SONIC PRACTICE - 2021</span></a>
+        <a href="sonicvisuals.html"> <img class="ppimage22" src="sonicvisuals.png"><span class="textppimage">SONIC PRACTICE - 2023</span></a>
     </div>
     <div class="ppimage3">
         <a href="twothousandrecords.html"> <img class="ppimage33" src="ttrthumb.png"><span class="textppimage">2000RECORDS - 2024</span></a>
+    </div>
+    <div class="ppimage4">
+        <a href="donda.html"> <img class="ppimage44" src="donda.png"><span class="textppimage">DONDA - 2021</span></a>
+    </div>
+    <div class="ppimage5">
+        <a href="DSA.html"> <img class="ppimage55" src="dsa.png"><span class="textppimage">SOUND ARCHIVE - 2022</span></a>
+    </div>
+    <div class="ppimage6">
+        <a href="donda.html"> <img class="ppimage66" src="hod.png"><span class="textppimage">H.O.D. - 2022</span></a>
     </div>
 </div>
 
