--- a/thankyou.html
+++ b/thankyou.html
@@ -34,17 +34,8 @@
 
 
 <div class="form">
-    <div class="contact1">Want to get in touch? Send me a message!</div>
-    <form action="https://api.web3forms.com/submit" class="form1" method="POST">
-        <input type="hidden" name="access_key" value="a8ed9164-d58e-40dc-81bc-d0b793d89e25">
-        <input type="hidden" name="from_name" value="ROBERTO VAZQUEZ">
-        <input type="hidden" name="redirect" value="https://robertovazquez.work/thankyou.html">
-        First Name: <input type="text" name="first_name"><br>
-        Last Name: <input type="text" name="last_name"><br>
-        Email: <input type="text" name="email"><br>
-        Message:<br><textarea rows="5" name="message" cols="30"></textarea><br>
-        <input type="submit" name="submit" value="Submit">
-        </form>
+    <div class="contact1">Thank you for the message!! I'll get back to you as soon as I can! :D</div>
+    <img class="stargif2" src="stargifreal.gif" draggable="false">
         
     
     </div>
